--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="TalentHive - Connect with skilled freelancers and find your next project" />
     <meta name="keywords" content="freelancing, freelancers, projects, remote work, talent" />
+    <meta name="theme-color" content="#2563eb" />
     <title>TalentHive - Freelancing Platform</title>
     
     <!-- Preconnect to external domains for performance -->
